Fix weeks graph when a week overlaps over 2 months.

--- a/resources/squidanalyzer.css
+++ b/resources/squidanalyzer.css
@@ -60,7 +60,7 @@ table.stata td a:hover { color: #76add2; }
 /*   Graphs   */
 /**************/
 
-#code_requests, #code_bytes, #network_hits, #network_bytes, #user_hits, #user_bytes, #domain_hits, #second_domain_hits, #domain_bytes, #second_domain_bytes, #mime_hits, #mime_bytes {
+#code_requests, #network_hits, #user_hits, #domain_hits, #second_domain_hits, #mime_hits, #code_bytes, #network_bytes, #user_bytes, #domain_bytes, #second_domain_bytes, #mime_bytes {
      width : 550px;
      height: 300px;
      background:#F3F2ED;
